PREVIEW: fix overly compact h1 spacing

--- a/src/App.css
+++ b/src/App.css
@@ -106,7 +106,8 @@
 }
 
 h1 {
-  margin: 0;
+  line-height: 1em;
+  margin-top: 0;
 }
 
 .view-pane {
